--- a/my-blog-backend/package.json
+++ b/my-blog-backend/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
