--- a/my-blog-backend/package.json
+++ b/my-blog-backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "firebase-admin": "^11.4.1",
     "mongodb": "^4.13.0"
   },
   "devDependencies": {
