--- a/my-blog-backend/package.json
+++ b/my-blog-backend/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "firebase-admin": "^11.4.1",
     "mongodb": "^4.13.0"
